--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-bootsplash": "^4.3.2",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-dimension": "^1.0.6",
     "react-native-document-picker": "^8.1.1",
